--- a/data_process/osmnx_pipeline/fmm_dataset.ipynb
+++ b/data_process/osmnx_pipeline/fmm_dataset.ipynb
@@ -6,14 +6,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cseadmin/dz/anaconda3/envs/dz/lib/python3.8/site-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.7) or chardet (4.0.0) doesn't match a supported version!\n",
-      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "'/home/cseadmin/dz/TrafficFlowModel/data_process/gis_pipeline'"
@@ -58,43 +50,182 @@
     "START_DAY = 1\n",
     "END_DAY = 30\n",
     "\n",
-    "DOWNSAMPLING_INTERVAL = 30\n",
+    "DOWNSAMPLING_INTERVAL = 5 #s\n",
     "TRAJ_SPLIT_INTERVAL = 600\n",
-    "FLOW_AGG_INTERVAL_MINUTE = 15\n",
+    "FLOW_AGG_INTERVAL_MINUTE = 5\n",
     "\n",
     "def contains(lat, lng):\n",
-    "    return lat >= MIN_LAT and lat <= MAX_LAT and lng >= MIN_LNG and lng <= MAX_LNG"
+    "    return lat >= MIN_LAT and lat <= MAX_LAT and lng >= MIN_LNG and lng <= MAX_LNG\n",
+    "\n",
+    "def notify(msg):\n",
+    "    import datetime\n",
+    "    channel = \"J0budaR2THarZw0OqS5O\"\n",
+    "    notify_url = f\"https://notify.run/{channel}\"\n",
+    "    massage = f\"{msg} | {str(datetime.datetime.now())}\"\n",
+    "    os.system(f'curl {notify_url} -d \"{massage}\"')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>gps_time</th>\n",
+       "      <th>speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4556480</th>\n",
+       "      <td>22.621574</td>\n",
+       "      <td>114.156810</td>\n",
+       "      <td>2020-06-08 13:32:15</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4579770</th>\n",
+       "      <td>22.621704</td>\n",
+       "      <td>114.156600</td>\n",
+       "      <td>2020-06-08 13:32:36</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4601596</th>\n",
+       "      <td>22.622225</td>\n",
+       "      <td>114.155785</td>\n",
+       "      <td>2020-06-08 13:32:56</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4604167</th>\n",
+       "      <td>22.622246</td>\n",
+       "      <td>114.155690</td>\n",
+       "      <td>2020-06-08 13:32:58</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4910696</th>\n",
+       "      <td>22.622255</td>\n",
+       "      <td>114.155480</td>\n",
+       "      <td>2020-06-08 13:33:03</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3410211</th>\n",
+       "      <td>22.569810</td>\n",
+       "      <td>114.117760</td>\n",
+       "      <td>2020-06-08 23:55:54</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3429444</th>\n",
+       "      <td>22.572780</td>\n",
+       "      <td>114.117880</td>\n",
+       "      <td>2020-06-08 23:56:13</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3458226</th>\n",
+       "      <td>22.577087</td>\n",
+       "      <td>114.116590</td>\n",
+       "      <td>2020-06-08 23:56:43</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3467801</th>\n",
+       "      <td>22.578468</td>\n",
+       "      <td>114.115870</td>\n",
+       "      <td>2020-06-08 23:56:53</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3616598</th>\n",
+       "      <td>22.596954</td>\n",
+       "      <td>114.111670</td>\n",
+       "      <td>2020-06-08 23:59:23</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>855 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               lat         lng            gps_time  speed\n",
+       "4556480  22.621574  114.156810 2020-06-08 13:32:15      7\n",
+       "4579770  22.621704  114.156600 2020-06-08 13:32:36     15\n",
+       "4601596  22.622225  114.155785 2020-06-08 13:32:56     16\n",
+       "4604167  22.622246  114.155690 2020-06-08 13:32:58     17\n",
+       "4910696  22.622255  114.155480 2020-06-08 13:33:03     12\n",
+       "...            ...         ...                 ...    ...\n",
+       "3410211  22.569810  114.117760 2020-06-08 23:55:54     63\n",
+       "3429444  22.572780  114.117880 2020-06-08 23:56:13     58\n",
+       "3458226  22.577087  114.116590 2020-06-08 23:56:43     60\n",
+       "3467801  22.578468  114.115870 2020-06-08 23:56:53     62\n",
+       "3616598  22.596954  114.111670 2020-06-08 23:59:23     42\n",
+       "\n",
+       "[855 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for taxi_file in os.listdir(TAXI_DATA_PATH):\n",
+    "    df_taxi = pd.read_pickle(os.path.join(TAXI_DATA_PATH, taxi_file))\n",
+    "    break\n",
+    "\n",
+    "df_taxi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 7060/617790 [02:22<3:26:08, 49.38it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_13898/541718384.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# df_taxi = pd.read_csv(os.path.join(TAXI_DATA_PATH, taxi_file), parse_dates=[\"gps_time\"])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mdf_taxi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTAXI_DATA_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtaxi_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdf_taxi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/dz/lib/python3.8/site-packages/pandas/io/pickle.py\u001b[0m in \u001b[0;36mread_pickle\u001b[0;34m(filepath_or_buffer, compression, storage_options)\u001b[0m\n\u001b[1;32m    215\u001b[0m                     \u001b[0;31m# RawIOBase, BufferedIOBase, TextIOBase, TextIOWrapper, mmap]\";\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    216\u001b[0m                     \u001b[0;31m# expected \"IO[bytes]\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 217\u001b[0;31m                     \u001b[0;32mreturn\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[arg-type]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    218\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mexcs_to_catch\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m                 \u001b[0;31m# e.g.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/dz/lib/python3.8/site-packages/numpy/core/numeric.py\u001b[0m in \u001b[0;36m_frombuffer\u001b[0;34m(buf, dtype, shape, order)\u001b[0m\n\u001b[1;32m   1859\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1860\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1861\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0m_frombuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1862\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mfrombuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1863\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      " 15%|█▍        | 92431/617790 [08:11<39:16, 222.95it/s]  "
      ]
     }
    ],
    "source": [
     "gps_file = open(os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"gps.csv\"), \"w\")\n",
-    "trash = gps_file.write(\"id;x;y;time\\n\")\n",
+    "trash = gps_file.write(\"id;x;y;time;speed\\n\")\n",
     "\n",
     "timedelta_downsampling = pd.Timedelta(seconds=DOWNSAMPLING_INTERVAL)\n",
     "timedelta_traj_split = pd.Timedelta(seconds=TRAJ_SPLIT_INTERVAL)\n",
@@ -118,6 +249,8 @@
     "            continue\n",
     "        if row[3] - last_time < timedelta_downsampling:  # resample: drop <30s\n",
     "            continue\n",
+    "        if row[4] > 60: # drop speed > 60km/h\n",
+    "            continue\n",
     "        if row[3] - last_time > timedelta_traj_split:\n",
     "            if len(line_buffer) > 1:  # only store length>1 traj\n",
     "                trash = gps_file.write(\"\".join(line_buffer))\n",
@@ -126,9 +259,11 @@
     "\n",
     "        last_time = row[3]\n",
     "\n",
-    "        line_buffer.append(f\"{traj_counter};{row[2]};{row[1]};{row[3]}\\n\")\n",
+    "        line_buffer.append(f\"{traj_counter};{row[2]};{row[1]};{row[3]};{row[4]}\\n\")\n",
     "\n",
-    "gps_file.close()"
+    "gps_file.close()\n",
+    "\n",
+    "notify(\"Finish fmm dataset.\")"
    ]
   },
   {
@@ -158,10 +293,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "476fbdcfc7b106bd527dcc3634a7654c2a942349860ebda7174f1fd38664bcc4"
+   "hash": "a8de3ed3a1560fc9f13af5266ca08823e90fcdd17bfae2dfaf8ec66fe041076c"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('dz': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -176,8 +311,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
