--- a/model/baseline_eval.ipynb
+++ b/model/baseline_eval.ipynb
@@ -1355,6 +1355,423 @@
     "\n",
     "df_eval.sort_values(\"Masked MAPE\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Model  AGCRN  Best Results:\n",
+    "Epoch 250: \n",
+    "|One   Horizon | MAPE: 31.717, 34.898; MAE: 2.407, 2.241; RMSE: 3.566, 3.266;\n",
+    "|Two   Horizon | MAPE: 32.351, 35.599; MAE: 2.453, 2.270; RMSE: 3.651, 3.323;\n",
+    "|Three Horizon | MAPE: 32.409, 35.942; MAE: 2.488, 2.299; RMSE: 3.714, 3.371;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Model  GWN  Best Results:\n",
+    "Epoch 107: \n",
+    "|One   Horizon | MAPE: 32.498, 34.097; MAE: 2.578, 2.432; RMSE: 3.765, 3.509;\n",
+    "|Two   Horizon | MAPE: 32.718, 34.350; MAE: 2.634, 2.463; RMSE: 3.860, 3.564;\n",
+    "|Three Horizon | MAPE: 33.460, 34.383; MAE: 2.639, 2.464; RMSE: 3.906, 3.594;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Model  LSTNet  Best Results:\n",
+    "Epoch 178: \n",
+    "|12    Horizon | MAPE: 34.285, 36.037; MAE: 2.776, 2.634; RMSE: 4.227, 3.964;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Model  MTGNN  Best Results:\n",
+    "Epoch 148: \n",
+    "|One   Horizon | MAPE: 31.803, 34.146; MAE: 2.438, 2.270; RMSE: 3.628, 3.324;\n",
+    "|Two   Horizon | MAPE: 32.118, 34.604; MAE: 2.503, 2.315; RMSE: 3.738, 3.402;\n",
+    "|Three Horizon | MAPE: 33.059, 35.534; MAE: 2.559, 2.371; RMSE: 3.828, 3.498;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Model  STNorm  Best Results:\n",
+    "Epoch 128: \n",
+    "|One   Horizon | MAPE: 30.944, 33.603; MAE: 2.403, 2.237; RMSE: 3.556, 3.267;\n",
+    "|Two   Horizon | MAPE: 31.561, 33.967; MAE: 2.456, 2.279; RMSE: 3.654, 3.346;\n",
+    "|Three Horizon | MAPE: 32.222, 35.703; MAE: 2.499, 2.308; RMSE: 3.730, 3.400;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "speed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Model  AGCRN  Best Results:\n",
+    "Epoch 7: \n",
+    "|One   Horizon | MAPE: 34.365, 32.860; MAE: 9.033, 8.456; RMSE: 12.425, 11.475;\n",
+    "|Two   Horizon | MAPE: 30.183, 28.651; MAE: 9.411, 8.693; RMSE: 12.655, 11.404;\n",
+    "|Three Horizon | MAPE: 30.961, 29.394; MAE: 9.224, 8.537; RMSE: 12.494, 11.312;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Model  GWN  Best Results:\n",
+    "Epoch 8: \n",
+    "|One   Horizon | MAPE: 44.940, 43.749; MAE: 9.676, 9.319; RMSE: 13.421, 12.907;\n",
+    "|Two   Horizon | MAPE: 52.827, 52.144; MAE: 10.542, 10.445; RMSE: 14.575, 14.456;\n",
+    "|Three Horizon | MAPE: 40.248, 39.003; MAE: 9.351, 8.887; RMSE: 13.027, 12.330;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Model  LSTNet  Best Results:\n",
+    "Epoch 134: \n",
+    "|12    Horizon | MAPE: 43.615, 42.910; MAE: 9.347, 9.191; RMSE: 13.337, 13.066;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Model  MTGNN  Best Results:\n",
+    "Epoch 81: \n",
+    "|One   Horizon | MAPE: 42.629, 43.016; MAE: 8.785, 9.177; RMSE: 12.706, 13.234;\n",
+    "|Two   Horizon | MAPE: 43.238, 43.541; MAE: 8.901, 9.243; RMSE: 12.832, 13.307;\n",
+    "|Three Horizon | MAPE: 43.443, 43.635; MAE: 8.992, 9.277; RMSE: 12.909, 13.319;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Model  STNorm  Best Results:\n",
+    "Epoch 29: \n",
+    "|One   Horizon | MAPE: 42.529, 42.740; MAE: 8.918, 9.177; RMSE: 12.801, 13.179;\n",
+    "|Two   Horizon | MAPE: 41.912, 41.742; MAE: 8.872, 9.090; RMSE: 12.681, 13.007;\n",
+    "|Three Horizon | MAPE: 42.941, 43.012; MAE: 8.994, 9.175; RMSE: 12.855, 13.135;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>MSE</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>Masked MAE</th>\n",
+       "      <th>Masked MAPE</th>\n",
+       "      <th>Masked MSE</th>\n",
+       "      <th>Masked RMSE</th>\n",
+       "      <th>R2</th>\n",
+       "      <th>EVAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>GWNET</th>\n",
+       "      <td>2.154081</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>11.071333</td>\n",
+       "      <td>3.323448</td>\n",
+       "      <td>2.370429</td>\n",
+       "      <td>0.442740</td>\n",
+       "      <td>13.436707</td>\n",
+       "      <td>3.660855</td>\n",
+       "      <td>0.842113</td>\n",
+       "      <td>0.842192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MTGNN</th>\n",
+       "      <td>2.257224</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>12.141762</td>\n",
+       "      <td>3.480952</td>\n",
+       "      <td>2.496198</td>\n",
+       "      <td>0.462327</td>\n",
+       "      <td>14.790841</td>\n",
+       "      <td>3.841814</td>\n",
+       "      <td>0.826847</td>\n",
+       "      <td>0.826952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DCRNN</th>\n",
+       "      <td>2.200221</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>11.034395</td>\n",
+       "      <td>3.320004</td>\n",
+       "      <td>2.409839</td>\n",
+       "      <td>0.463776</td>\n",
+       "      <td>13.307870</td>\n",
+       "      <td>3.645766</td>\n",
+       "      <td>0.842636</td>\n",
+       "      <td>0.842683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AGCRN</th>\n",
+       "      <td>2.222308</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>11.238118</td>\n",
+       "      <td>3.350460</td>\n",
+       "      <td>2.402686</td>\n",
+       "      <td>0.481806</td>\n",
+       "      <td>13.369362</td>\n",
+       "      <td>3.654232</td>\n",
+       "      <td>0.839730</td>\n",
+       "      <td>0.839988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STGCN</th>\n",
+       "      <td>2.240672</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>12.580816</td>\n",
+       "      <td>3.538950</td>\n",
+       "      <td>2.583992</td>\n",
+       "      <td>0.506951</td>\n",
+       "      <td>15.351915</td>\n",
+       "      <td>3.909242</td>\n",
+       "      <td>0.820592</td>\n",
+       "      <td>0.820608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GRU</th>\n",
+       "      <td>2.910206</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>19.396664</td>\n",
+       "      <td>4.404157</td>\n",
+       "      <td>3.220675</td>\n",
+       "      <td>0.703136</td>\n",
+       "      <td>23.180984</td>\n",
+       "      <td>4.814656</td>\n",
+       "      <td>0.723363</td>\n",
+       "      <td>0.723412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSTGCN</th>\n",
+       "      <td>2.851515</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>16.389740</td>\n",
+       "      <td>4.047523</td>\n",
+       "      <td>3.120554</td>\n",
+       "      <td>0.747849</td>\n",
+       "      <td>19.234797</td>\n",
+       "      <td>4.384741</td>\n",
+       "      <td>0.766191</td>\n",
+       "      <td>0.766216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STSGCN</th>\n",
+       "      <td>5.537956</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>79.504955</td>\n",
+       "      <td>8.916552</td>\n",
+       "      <td>6.104897</td>\n",
+       "      <td>0.865794</td>\n",
+       "      <td>98.131285</td>\n",
+       "      <td>9.906120</td>\n",
+       "      <td>-0.133908</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FNN</th>\n",
+       "      <td>4.699834</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>58.986231</td>\n",
+       "      <td>7.678108</td>\n",
+       "      <td>5.336428</td>\n",
+       "      <td>0.866719</td>\n",
+       "      <td>72.564157</td>\n",
+       "      <td>8.515671</td>\n",
+       "      <td>0.158762</td>\n",
+       "      <td>0.232099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ASTGCN</th>\n",
+       "      <td>3.372940</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>24.157639</td>\n",
+       "      <td>4.914566</td>\n",
+       "      <td>3.706323</td>\n",
+       "      <td>0.877116</td>\n",
+       "      <td>28.290035</td>\n",
+       "      <td>5.318389</td>\n",
+       "      <td>0.655362</td>\n",
+       "      <td>0.655578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LSTM</th>\n",
+       "      <td>4.468870</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>44.571861</td>\n",
+       "      <td>6.675980</td>\n",
+       "      <td>4.669395</td>\n",
+       "      <td>1.091888</td>\n",
+       "      <td>50.414068</td>\n",
+       "      <td>7.100079</td>\n",
+       "      <td>0.364306</td>\n",
+       "      <td>0.364755</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Seq2Seq</th>\n",
+       "      <td>4.869545</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>53.343612</td>\n",
+       "      <td>7.298692</td>\n",
+       "      <td>5.091221</td>\n",
+       "      <td>1.173621</td>\n",
+       "      <td>60.383776</td>\n",
+       "      <td>7.768389</td>\n",
+       "      <td>0.239185</td>\n",
+       "      <td>0.241053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AutoEncoder</th>\n",
+       "      <td>5.256512</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>61.821539</td>\n",
+       "      <td>7.862638</td>\n",
+       "      <td>5.500915</td>\n",
+       "      <td>1.207560</td>\n",
+       "      <td>72.174082</td>\n",
+       "      <td>8.495500</td>\n",
+       "      <td>0.118297</td>\n",
+       "      <td>0.128247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ToGCN</th>\n",
+       "      <td>4.601609</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>30.596877</td>\n",
+       "      <td>5.531438</td>\n",
+       "      <td>4.058757</td>\n",
+       "      <td>1.475272</td>\n",
+       "      <td>27.081466</td>\n",
+       "      <td>5.203973</td>\n",
+       "      <td>0.563622</td>\n",
+       "      <td>0.650219</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  MAE  MAPE        MSE      RMSE  Masked MAE  Masked MAPE  \\\n",
+       "GWNET        2.154081   inf  11.071333  3.323448    2.370429     0.442740   \n",
+       "MTGNN        2.257224   inf  12.141762  3.480952    2.496198     0.462327   \n",
+       "DCRNN        2.200221   inf  11.034395  3.320004    2.409839     0.463776   \n",
+       "AGCRN        2.222308   inf  11.238118  3.350460    2.402686     0.481806   \n",
+       "STGCN        2.240672   inf  12.580816  3.538950    2.583992     0.506951   \n",
+       "GRU          2.910206   inf  19.396664  4.404157    3.220675     0.703136   \n",
+       "MSTGCN       2.851515   inf  16.389740  4.047523    3.120554     0.747849   \n",
+       "STSGCN       5.537956   inf  79.504955  8.916552    6.104897     0.865794   \n",
+       "FNN          4.699834   inf  58.986231  7.678108    5.336428     0.866719   \n",
+       "ASTGCN       3.372940   inf  24.157639  4.914566    3.706323     0.877116   \n",
+       "LSTM         4.468870   inf  44.571861  6.675980    4.669395     1.091888   \n",
+       "Seq2Seq      4.869545   inf  53.343612  7.298692    5.091221     1.173621   \n",
+       "AutoEncoder  5.256512   inf  61.821539  7.862638    5.500915     1.207560   \n",
+       "ToGCN        4.601609   inf  30.596877  5.531438    4.058757     1.475272   \n",
+       "\n",
+       "             Masked MSE  Masked RMSE        R2      EVAR  \n",
+       "GWNET         13.436707     3.660855  0.842113  0.842192  \n",
+       "MTGNN         14.790841     3.841814  0.826847  0.826952  \n",
+       "DCRNN         13.307870     3.645766  0.842636  0.842683  \n",
+       "AGCRN         13.369362     3.654232  0.839730  0.839988  \n",
+       "STGCN         15.351915     3.909242  0.820592  0.820608  \n",
+       "GRU           23.180984     4.814656  0.723363  0.723412  \n",
+       "MSTGCN        19.234797     4.384741  0.766191  0.766216  \n",
+       "STSGCN        98.131285     9.906120 -0.133908  0.000000  \n",
+       "FNN           72.564157     8.515671  0.158762  0.232099  \n",
+       "ASTGCN        28.290035     5.318389  0.655362  0.655578  \n",
+       "LSTM          50.414068     7.100079  0.364306  0.364755  \n",
+       "Seq2Seq       60.383776     7.768389  0.239185  0.241053  \n",
+       "AutoEncoder   72.174082     8.495500  0.118297  0.128247  \n",
+       "ToGCN         27.081466     5.203973  0.563622  0.650219  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval=pd.DataFrame(columns=[\"MAE\", \"MAPE\", \"MSE\", \"RMSE\", \"Masked MAE\", \"Masked MAPE\", \"Masked MSE\", \"Masked RMSE\", \"R2\", \"EVAR\"])\n",
+    "\n",
+    "os.chdir(\"/home/cseadmin/dz/Bigscity-LibCity\")\n",
+    "for log_file in os.listdir(\"log_sz_taxi_202006\"):\n",
+    "    model=log_file.split(\"_\")[1].split(\".\")[0]\n",
+    "    with open(os.path.join(\"log_sz_taxi_202006\", log_file)) as f:\n",
+    "        for line in f.readlines():\n",
+    "            if \"INFO\" not in line:\n",
+    "                continue\n",
+    "            if line.split(\"INFO\")[1].startswith(\" - Evaluate result\"):\n",
+    "                res_path=line.split(\" \")[-1].strip()\n",
+    "                break\n",
+    "    df_eval_res=pd.read_csv(res_path)\n",
+    "    \n",
+    "    df_eval.loc[model]=df_eval_res.mean().values\n",
+    "    \n",
+    "df_eval.sort_values(\"Masked MAPE\")"
+   ]
   }
  ],
  "metadata": {
@@ -1362,7 +1779,7 @@
    "hash": "476fbdcfc7b106bd527dcc3634a7654c2a942349860ebda7174f1fd38664bcc4"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('dz': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1377,8 +1794,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
