--- a/data_process/osmnx_pipeline/fmm_dataset.ipynb
+++ b/data_process/osmnx_pipeline/fmm_dataset.ipynb
@@ -46,16 +46,17 @@
     "MAX_LAT = 22.5517\n",
     "MIN_LNG = 114.0439\n",
     "MAX_LNG = 114.0633\n",
+    "delta = 0\n",
     "\n",
     "START_DAY = 1\n",
     "END_DAY = 30\n",
     "\n",
-    "DOWNSAMPLING_INTERVAL = 5 #s\n",
+    "DOWNSAMPLING_INTERVAL = 10 #s\n",
     "TRAJ_SPLIT_INTERVAL = 600\n",
     "FLOW_AGG_INTERVAL_MINUTE = 5\n",
     "\n",
     "def contains(lat, lng):\n",
-    "    return lat >= MIN_LAT and lat <= MAX_LAT and lng >= MIN_LNG and lng <= MAX_LNG\n",
+    "    return lat >= MIN_LAT - delta and lat <= MAX_LAT + delta and lng >= MIN_LNG - delta and lng <= MAX_LNG + delta\n",
     "\n",
     "def notify(msg):\n",
     "    import datetime\n",
@@ -219,7 +220,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 15%|█▍        | 92431/617790 [08:11<39:16, 222.95it/s]  "
+      "  4%|▎         | 22711/617790 [08:41<4:04:31, 40.56it/s] "
      ]
     }
    ],
@@ -296,9 +297,9 @@
    "hash": "a8de3ed3a1560fc9f13af5266ca08823e90fcdd17bfae2dfaf8ec66fe041076c"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:dz] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-dz-py"
   },
   "language_info": {
    "codemirror_mode": {
